--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,20 +1,63 @@
 header {
-    padding: 2dvh 7%;
+  position: sticky;
+  top: 0;
+  padding: clamp(1rem, 3.5dvh, 3rem) clamp(1.5rem, 7%, 5rem);
+  z-index: 9999;
+  background: var(--bg-p1);
+  box-shadow: 0 5px 23px var(--bg-p1);
 }
+
 .header-content {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
+
 .logo img {
-    height: 8dvh;
-    width: auto;
+  height: clamp(20px, 2.5vw, 35px);
+  width: auto;
 }
+
 .nav-links {
-    display: flex;
-    gap: 2rem;
+  display: flex;
+  align-items: center;
+  gap: clamp(1rem, 3vw, 3rem);
 }
+
 .nav-links a {
-    color: var(--font-p1);
-    font-weight: 400;
+  color: var(--font-p1);
+  font-size: clamp(0.8rem, 1vw, 1.2rem);
+  font-weight: 400;
+}
+
+.hamburger {
+  display: none;
+}
+
+.hamburger img {
+  height: clamp(18px, 2vw, 25px);
+}
+
+/* Tablet + Mobile */
+@media (max-width: 765px) {
+  .nav-links {
+    display: none;
+    flex-direction: column;
+    position: absolute;
+    top: 100%;
+    right: 5px;
+    margin-top: 5px;
+    background: var(--bg-p1);
+    padding: 1.5rem;
+    border-radius: 20px;
+    box-shadow: 0px 2px 15px var(--bg-p1);
+  }
+
+  .nav.open .nav-links {
+    display: flex;
+  }
+
+  .hamburger {
+    display: block;
+  }
 }
