--- a/src/App.css
+++ b/src/App.css
@@ -1,26 +1,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 :root {
     /* Colores de fondo */
-    --bg-p1: #000000;
-    --bg-p2: #111111;
-    --bg-p3: #252525;
-    --bg-p4: #313131;
-    --bg-p5: #424242;
+    --bg-p1: #ffffff;
+    --bg-p2: #ebebeb;
+    --bg-p3: #d1d1d1;
+    --bg-p4: #b8b8b8;
+    --bg-p5: #9b9b9b;
 
-    --bg-s1: #9b9b9b;
-    --bg-s2: #b8b8b8;
-    --bg-s3: #d1d1d1;
-    --bg-s4: #ebebeb;
-    --bg-s5: #ffffff;
+    --bg-s1: #000000;
+    --bg-s2: #111111;
+    --bg-s3: #252525;
+    --bg-s4: #313131;
+    --bg-s5: #424242;
 
     /* Colores de texto */
-    --font-p1: #ffffff;
-    --font-p1: #ebebeb;
-    --font-p3: #d1d1d1;
+    --font-s1: #ffffff;
+    --font-s1: #ebebeb;
+    --font-s3: #d1d1d1;
 
-    --font-s1: #000000;
-    --font-s2: #111111;
-    --font-s3: #252525;
+    --font-p1: #000000;
+    --font-p2: #111111;
+    --font-p3: #252525;
 
     /* Colores para las redes */
     --whatsapp: #25d366;
