--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,11 +1,17 @@
 header {
   position: sticky;
   top: 0;
-  padding: clamp(1rem, 3.5dvh, 3rem) clamp(1.5rem, 7%, 5rem);
+  padding: clamp(2rem, 3dvh, 4rem) clamp(1rem, 15vw, 15rem);
   z-index: 9999;
   background: var(--bg-p1);
-  box-shadow: 0 5px 23px var(--bg-p1);
+  /*box-shadow: 0 0 15px var(--bg-p5);*/
 }
+@media (max-width: 765px) {
+  header {
+    padding: clamp(1.5rem, 3dvh, 4rem) clamp(1rem, 7vw, 5rem);
+  }
+}
+
 
 .header-content {
   display: flex;
@@ -14,7 +20,7 @@ header {
 }
 
 .logo img {
-  height: clamp(20px, 2.5vw, 35px);
+  height: clamp(10px, 2vw, 25px);
   width: auto;
 }
 
@@ -26,7 +32,7 @@ header {
 
 .nav-links a {
   color: var(--font-p1);
-  font-size: clamp(0.8rem, 1vw, 1.2rem);
+  font-size: clamp(0.8rem, 0.vw, 1rem);
   font-weight: 400;
 }
 
@@ -35,7 +41,7 @@ header {
 }
 
 .hamburger img {
-  height: clamp(18px, 2vw, 25px);
+  height: clamp(14px, 2vw, 22px);
 }
 
 /* Tablet + Mobile */
@@ -50,7 +56,7 @@ header {
     background: var(--bg-p1);
     padding: 1.5rem;
     border-radius: 20px;
-    box-shadow: 0px 2px 15px var(--bg-p1);
+    /*box-shadow: 0px 2px 15px var(--bg-p1);*/
   }
 
   .nav.open .nav-links {
